fix: remove dataset details properies vertical scrollbar in ec mode

--- a/src/styles/components-ec-style/_dataset_details.scss
+++ b/src/styles/components-ec-style/_dataset_details.scss
@@ -179,6 +179,7 @@
     }
     table {
       margin-bottom: 0 !important;
+      overflow-y: hidden;
     }
   }
 
